--- a/SpreadSheetPrototype/Base.lproj/Main.storyboard
+++ b/SpreadSheetPrototype/Base.lproj/Main.storyboard
@@ -18,42 +18,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SheetListCell" rowHeight="77" id="rPr-RB-0NS" customClass="SheetListCell" customModule="SpreadSheetPrototype" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="77"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SheetListCell" rowHeight="70" id="rPr-RB-0NS" customClass="SheetListCell" customModule="SpreadSheetPrototype" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rPr-RB-0NS" id="XhC-dH-YKq">
-                                    <rect key="frame" x="0.0" y="0.0" width="383" height="77"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="383" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="제목 없는 스프레드시트" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FIe-EQ-eYy" userLabel="sheetTitle Label">
-                                            <rect key="frame" x="33" y="19" width="182" height="24"/>
+                                            <rect key="frame" x="33" y="19" width="155" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="작성일자" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5v-G4-yXw" userLabel="date Label">
-                                            <rect key="frame" x="34" y="47" width="52" height="18"/>
+                                            <rect key="frame" x="34" y="47" width="42" height="15"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" systemColor="systemGrayColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="마지막 수정자" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="POk-PN-8Cz" userLabel="user Label">
-                                            <rect key="frame" x="267" y="28" width="93" height="21"/>
+                                            <rect key="frame" x="267" y="28" width="72" height="16"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="dateLabel" destination="G5v-G4-yXw" id="KXL-Ng-O2l"/>
-                                    <outlet property="modifiedUserLabel" destination="POk-PN-8Cz" id="etJ-GC-6VR"/>
-                                    <outlet property="sheetTitleLabel" destination="FIe-EQ-eYy" id="fK7-yK-LdQ"/>
-                                    <outlet property="shhetTitleLabel" destination="FIe-EQ-eYy" id="ssa-jF-Poq"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -65,7 +59,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="9IV-DZ-7AP">
                             <color key="tintColor" red="0.17231217030000001" green="0.44624298810000002" blue="0.1253960133" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <connections>
-                                <segue destination="hzo-e6-C2y" kind="presentation" id="ZAD-iv-sNj"/>
+                                <action selector="addSheet:" destination="OBb-nL-064" id="WND-u0-JDI"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -77,13 +71,13 @@
         <!--new sheet-->
         <scene sceneID="G2w-DX-q76">
             <objects>
-                <viewController id="ZDi-pS-wCY" sceneMemberID="viewController">
+                <viewController id="ZDi-pS-wCY" customClass="SheetSceneCollectionViewController" customModule="SpreadSheetPrototype" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="36n-o9-qYH">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Qhm-mu-bVz">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewLayout key="collectionViewLayout" id="Y8H-0g-PMd"/>
                                 <cells>
@@ -106,6 +100,18 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZKT-tp-xaJ">
+                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem width="161" style="plain" systemItem="fixedSpace" id="SE8-pO-EMl"/>
+                                    <barButtonItem systemItem="save" id="znw-Sj-fd7">
+                                        <connections>
+                                            <action selector="save:" destination="ZDi-pS-wCY" id="ZYG-yx-38v"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SDy-6K-aIr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -117,20 +123,33 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="new sheet" id="Hd1-AN-uVg">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="5Lc-o7-Sdf"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="5Lc-o7-Sdf">
+                            <connections>
+                                <action selector="close:" destination="ZDi-pS-wCY" id="irW-TN-vxw"/>
+                            </connections>
+                        </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem title="Col +" id="0Aj-Ze-Mep">
                                 <color key="tintColor" red="0.1701542721" green="0.44628400260000001" blue="0.12782916559999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <connections>
+                                    <action selector="addCol:" destination="ZDi-pS-wCY" id="LY0-wl-c8z"/>
+                                </connections>
                             </barButtonItem>
                             <barButtonItem title="Row +" id="CnJ-tH-M7v">
                                 <color key="tintColor" red="0.1701542721" green="0.44628400260000001" blue="0.12782916559999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <connections>
+                                    <action selector="addRow:" destination="ZDi-pS-wCY" id="NO3-75-dR7"/>
+                                </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="Qhm-mu-bVz" id="1fC-HY-hFo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qxk-bC-fzo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-88.405797101449281" y="1311.8303571428571"/>
+            <point key="canvasLocation" x="-165" y="1327"/>
         </scene>
         <!--Profile-->
         <scene sceneID="tne-QT-ifu">
@@ -193,7 +212,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hzo-e6-C2y" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rqS-0c-l53">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
