--- a/SpreadSheetPrototype/Base.lproj/Main.storyboard
+++ b/SpreadSheetPrototype/Base.lproj/Main.storyboard
@@ -48,6 +48,11 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dateLabel" destination="G5v-G4-yXw" id="5m0-Uw-X5S"/>
+                                    <outlet property="modifiedUser" destination="POk-PN-8Cz" id="ybd-vn-EDX"/>
+                                    <outlet property="sheetTitleLabel" destination="FIe-EQ-eYy" id="bwf-Ag-YqS"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -149,7 +154,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qxk-bC-fzo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-165" y="1327"/>
+            <point key="canvasLocation" x="-170" y="1312"/>
         </scene>
         <!--Profile-->
         <scene sceneID="tne-QT-ifu">
